@@ -1,18 +1,0 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
-
-<xsl:stylesheet version="1.0"
-                xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
-
- <!-- Send ping packet every 240 seconds by default -->
- <xsl:template match="/bet/@upgrade">
-   <xsl:attribute name="upgrade">Upgraded</xsl:attribute>
- </xsl:template>
- 
- <!-- copy the rest verbatim -->
- <xsl:template match="@*|node()">
-  <xsl:copy>
-   <xsl:apply-templates select="@*|node()"/>
-  </xsl:copy>
- </xsl:template>
-
-</xsl:stylesheet>
